--- a/force-app/main/default/classes/ApexTest_AutoConvertLeads.cls
+++ b/force-app/main/default/classes/ApexTest_AutoConvertLeads.cls
@@ -3,7 +3,7 @@
  */
 @IsTest(SeeAllData = true)
 public with sharing class ApexTest_AutoConvertLeads {
-
+// add a test with feature 1
     static testMethod void testLeads(){
 
 
