Update ApexTest_AutoConvertLeads.cls (#2)

--- a/force-app/main/default/classes/ApexTest_AutoConvertLeads.cls
+++ b/force-app/main/default/classes/ApexTest_AutoConvertLeads.cls
@@ -3,7 +3,7 @@
  */
 @IsTest(SeeAllData = true)
 public with sharing class ApexTest_AutoConvertLeads {
-// add a test with feature 1
+// Add a test with feature 1 and 2
     static testMethod void testLeads(){
 
 
