--- a/force-app/main/default/classes/ApexTest_AutoConvertLeads.cls
+++ b/force-app/main/default/classes/ApexTest_AutoConvertLeads.cls
@@ -3,7 +3,7 @@
  */
 @IsTest(SeeAllData = true)
 public with sharing class ApexTest_AutoConvertLeads {
-// Add a test with feature 1 and 2
+// Add a test with feature 1 and 2 and 4
     static testMethod void testLeads(){
 
 
